@@ -3,6 +3,7 @@
   <img class='usericon' src='$image_uri' width='24' height='24'>
   $retweet
   <a href='gfeedline://twitter.com/$user_name/status/$id'
-     style='color: #$user_color;' class='username'>$user_name</a>
+     style='color: #$user_color;' class='username'
+     title='$full_name'>$user_name</a>
   <span class='body'>$status_body</span>
 </div>
