@@ -9,7 +9,8 @@
     <div>
       $retweet
       <a href='gfeedline://twitter.com/$user_name/status/$id'
-         style='color: #$user_color;' class='username'>$user_name</a>
+         style='color: #$user_color;' class='username' 
+         title='$full_name'>$user_name</a>
     </div>
     <div class='body'>$status_body</div>
     <div class='datetime'>($date_time)</div>
